--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,30 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  firebase_storage: ^11.2.3
+  image_picker: ^0.8.8
+  cloud_firestore: ^4.8.1
+  firebase_messaging: ^14.6.3
+  google_fonts: ^5.1.0
+  cr_calendar: ^1.2.1
+  file_picker: ^5.3.3
+  dotted_border: ^2.0.0+3
+  pin_code_fields: ^8.0.1
+  url_launcher: ^6.1.12
+  shimmer: ^3.0.0
+  nuts_activity_indicator: ^1.0.0
+  syncfusion_flutter_charts: ^22.2.9
+  select_card: ^0.0.9
+  badges: ^3.1.1
+  permission_handler: ^10.4.3
+  flutter_riverpod: ^2.4.0
+  intl: ^0.18.1
+  showcaseview: ^2.0.3
+  graphview: ^1.2.0
+  graphite: ^1.1.2
+  persistent_bottom_nav_bar_v2: ^4.2.8
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +83,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/flags/
+    - assets/icons/frame/16px/
+    - assets/icons/frame/20px/
+    - assets/icons/frame/24px/
+    - assets/icons/logotype/
+    - assets/icons/may_need_later/
+    - assets/icons/payment_methods/
+    - assets/illustrations/
+    - assets/avatars/48px/
+    - assets/avatars/80px/
+    - assets/avatars/120px/
+    - assets/graphic/
+    - assets/icons/frame/24px/20_Clear_form.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
