--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   graphview: ^1.2.0
   graphite: ^1.1.2
   persistent_bottom_nav_bar_v2: ^4.2.8
-  
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
