--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   graphite: ^1.1.2
   persistent_bottom_nav_bar_v2: ^4.2.8
   get: ^4.6.6
+  flutter_pdfview: ^1.3.2
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
