--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   get: ^4.6.6
   flutter_pdfview: ^1.3.2
   path_provider: ^2.1.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
