--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_pdfview: ^1.3.2
   path_provider: ^2.1.1
   photo_view: ^0.14.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
