--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   path_provider: ^2.1.1
   photo_view: ^0.14.0
   share_plus: ^7.2.1
+  package_info_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
