--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   select_card: ^0.0.9
   badges: ^3.1.1
   permission_handler: ^10.4.3
-  flutter_riverpod: ^2.4.0
+  flutter_riverpod: ^2.4.10
   intl: ^0.18.1
   showcaseview: ^2.0.3
   graphview: ^1.2.0
@@ -76,6 +76,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  custom_lint: ^0.6.0
+  riverpod_lint: ^2.3.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
