--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,8 @@ dependencies:
   permission_handler: ^10.4.3
   flutter_riverpod: ^2.4.10
   intl: ^0.18.1
-  showcaseview: ^2.0.3
+  showcaseview:
+    git: https://github.com/vlad0209/flutter_showcaseview.git
   graphview: ^1.2.0
   graphite: ^1.1.2
   persistent_bottom_nav_bar_v2: ^4.2.8
