--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,6 @@ dependencies:
   permission_handler: ^10.4.3
   flutter_riverpod: ^2.4.10
   intl: ^0.18.1
-  showcaseview:
-    git: https://github.com/vlad0209/flutter_showcaseview.git
   graphview: ^1.2.0
   graphite: ^1.1.2
   persistent_bottom_nav_bar_v2: ^4.2.8
@@ -66,6 +64,7 @@ dependencies:
   photo_view: ^0.14.0
   share_plus: ^7.2.1
   package_info_plus: ^5.0.1
+  autoscale_tabbarview: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -93,6 +92,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/icons/
     - assets/icons/flags/
     - assets/icons/frame/16px/
     - assets/icons/frame/20px/
